--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ body {
   background-color: #FDFDF8;
 }
 
+/* phase out? */
 .container{
   position: absolute;
   z-index: 1;
@@ -73,6 +74,13 @@ body {
   align-items: start;
 }
 
+.pageContainerMobile{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+
 .sideContainer{
   background-image: url(./assets/backgrounds2/daisiesFlipped.jpg);
   background-size: contain;
@@ -88,10 +96,6 @@ body {
   justify-content: flex-start;
   align-items: baseline;
 }
-/* 
-save background image as low-opacity, then can use background-image CSS rule.
-would no longer need to have so many background CSS classes.
-*/
 
 .backgroundImg{
   position: absolute;
