--- a/src/components/Navigation/homeNav.css
+++ b/src/components/Navigation/homeNav.css
@@ -21,6 +21,7 @@
     transition: 0.2s ease-in;
     width: fit-content;
     height: fit-content;
+    text-align: center;
 }
 
 .homeNavButton:hover{
