cleanup Projects code

--- a/src/components/ProjectFilter/ProjectFilter.css
+++ b/src/components/ProjectFilter/ProjectFilter.css
@@ -27,3 +27,9 @@
 .filterListItem{
     margin: 0px 10px 0px 10px;
 }
+
+@media (max-width: 768px){
+    .projectsFilter{
+        top: 50px;
+    }
+}
