--- a/src/components/ProjectFilter/ProjectFilter.css
+++ b/src/components/ProjectFilter/ProjectFilter.css
@@ -1,15 +1,20 @@
 .projectsFilter{
-    position: fixed;
-    top: 0;
-    height: 50px;
     width: 100%;
     font-family: "Inter", sans-serif;
     background-color: white;
-    border-bottom: 1px solid black;
 
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    p{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    ul{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
 }
 
 .filterList{
@@ -20,16 +25,22 @@
 
     width: fit-content;
     margin-left: 10px;
+    
     padding: 0;
     list-style: none;
 }
 
 .filterListItem{
     margin: 0px 10px 0px 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 3px 6px;
+
+    transition: 0.1s ease-in;
 }
 
-@media (max-width: 768px){
-    .projectsFilter{
-        top: 50px;
-    }
+.filterListItem:hover{
+    background-color: black;
+    color: white;
+    transition: 0.1s ease-out;
 }
