--- a/src/components/ProjectFilter/ProjectFilter.css
+++ b/src/components/ProjectFilter/ProjectFilter.css
@@ -35,12 +35,12 @@
     border: 1px solid black;
     border-radius: 10px;
     padding: 3px 6px;
-
     transition: 0.1s ease-in;
 }
 
-.filterListItem:hover{
+.filterListItem:hover, .filterListItem.active{
     background-color: black;
     color: white;
+    cursor: pointer;
     transition: 0.1s ease-out;
 }
