--- a/src/pages/Sources/Sources.css
+++ b/src/pages/Sources/Sources.css
@@ -1,7 +1,7 @@
 .sourcesContentBox{
     font-family: "Inter", sans-serif;
     font-weight: 400;
-    width: 80%;
+    width: 90%;
     border: solid 1.5px black;
     background-color: rgba(236, 213, 229, 0.5);
     margin: 20px 0px;
@@ -32,14 +32,19 @@
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.5);
 
-    max-width: 300px;
+    width: 315px;
+    
 
     img{
-        width: 80px;
+        max-width: 150px;
+        max-height: 250px;
+    }
+
+    p{
+        margin: 0px 0px 0px 5px;
     }
 
     a{
         color: black;
-        margin-left: 10px;
     }
 }
