--- a/src/components/ListFilter/ListFilter.css
+++ b/src/components/ListFilter/ListFilter.css
@@ -1,4 +1,4 @@
-.projectsFilter{
+.listFilter{
     width: 100%;
     font-family: "Inter", sans-serif;
     background-color: white;
@@ -11,22 +11,20 @@
         margin-top: 10px;
         margin-bottom: 10px;
     }
-    ul{
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
 }
 
-.filterList{
+.listFilterItems{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    padding: 0;
+
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
 
     width: fit-content;
-    margin-left: 10px;
-    
-    padding: 0;
     list-style: none;
 }
 
