--- a/src/index.css
+++ b/src/index.css
@@ -46,10 +46,11 @@ font-family: "Inter", sans-serif;
 
 html{
   scroll-behavior: smooth;
+  margin: 0px;
 }
 
 body {
-  margin: 0;
+  margin: 0px;
   width: 100vw;
   height: 100vh;
   overflow-x: hidden;
