create badges, captioned video

--- a/src/components/ProjectTile/ProjectTile.css
+++ b/src/components/ProjectTile/ProjectTile.css
@@ -32,3 +32,11 @@
         margin: 0px;
     }
 }
+
+.projectTileBadges{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: fit-content;
+}
