--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,20 @@ body {
   align-items: baseline;
 }
 
+.sideContainerNoBg{
+  background-color: #FDFDF8;
+
+  margin-top: 20px;
+  margin-left: calc(230px + 20px);
+  min-height: 95vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+
+
 .backgroundImg{
   position: absolute;
   z-index: 0;
