--- a/src/components/ListFilter/ListFilter.css
+++ b/src/components/ListFilter/ListFilter.css
@@ -31,6 +31,7 @@
 .filterListItem{
     margin: 0px 10px 0px 10px;
     border: 1px solid black;
+    background-color: white;
     border-radius: 10px;
     padding: 3px 6px;
     transition: 0.1s ease-in;
@@ -41,4 +42,10 @@
     color: white;
     cursor: pointer;
     transition: 0.1s ease-out;
+}
+
+@media (max-width: 768px){
+    .listFilter{
+        padding-left: 5px;
+    }
 }
