--- a/src/components/ProjectTile/ProjectTile.css
+++ b/src/components/ProjectTile/ProjectTile.css
@@ -1,4 +1,4 @@
-.projectTile2{
+.projectTile{
     font-family: "Inter", sans-serif;
     text-decoration: none;
     color: black;
@@ -15,7 +15,7 @@
     transition: 0.1s ease-in;
 }
 
-.projectTile2:hover{
+.projectTile:hover{
     background-color: rgba(225, 207, 220, 0.2);
     transition: 0.1s ease-out;
 }
@@ -39,4 +39,20 @@
     justify-content: flex-start;
     align-items: center;
     width: fit-content;
+}
+
+@media (max-width: 768px) {
+    .projectTile{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: first baseline;
+    }
+
+    .projectTileInfo{
+    margin-left: 5px;
+    h3{
+        font-size: 24px;
+    }
+}
 }
