--- a/src/layouts/IndividualProjectPage.css
+++ b/src/layouts/IndividualProjectPage.css
@@ -12,7 +12,7 @@
     h3{
         font-family: Lacquer;
         font-size: 30px;
-        margin: 10px 0px 0px 0px;
+        margin: 10px 0px 10px 0px;
     }
 }
 
@@ -23,9 +23,8 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    margin: 0px 0px 20px 0px;
-    padding-bottom: 10px;
-    border-bottom: 2px solid #ECD5E5;
+    margin: 0px 0px 2px 5px;
+    
 
     .individualProjectDate{
         font-family: Inter;
@@ -56,6 +55,17 @@
     }
 }
 
+.individualProjectPageBadges{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0px 0px 20px 0px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #ECD5E5;
+}
+
 .individualProjectPageBody{
     font-family: "Inter";
     font-size: 16px;
@@ -72,8 +82,10 @@
     }
 }
 
-@media (max-width: 1000px) {
-    .individualProjectPageContent{
-        width: 100%;
+@media (max-width: 768px) {
+    .individualProjectPageContainer{
+        img{
+            width: 100%;
+        }
     }
 }
