--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,12 +1,11 @@
 .listHeader{
     position: fixed;
     top: 0;
-    height: 110px;
+    height: fit-content;
     width: 100%;
     font-family: "Inter", sans-serif;
     background-color: white;
     border-bottom: 1px solid black;
-    filter: drop-shadow(2px 2px 5px var(--color-accent-two));
 
     display: flex;
     flex-direction: column;
@@ -14,9 +13,9 @@
 }
 
 .listHeaderTitle{
+    padding-top: 5px;
     margin: 0px;
     font-style: italic;
-
 }
 
 .listSearchAndSort{
@@ -67,7 +66,6 @@
     }
 
     .listHeaderTitle{
-        padding-top: 25px;
         padding-left: 5px;
     }
 
