--- a/src/components/ListFilter/ListFilter.css
+++ b/src/components/ListFilter/ListFilter.css
@@ -5,7 +5,8 @@
 
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content: start;
+    align-items: first baseline;
 
     p{
         margin-top: 10px;
@@ -14,6 +15,7 @@
 }
 
 .listFilterItems{
+    width: 60%;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
@@ -21,15 +23,15 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: first baseline;
     align-items: center;
+    flex-wrap: wrap;
 
-    width: fit-content;
     list-style: none;
 }
 
 .filterListItem{
-    margin: 0px 10px 0px 10px;
+    margin: 0px 5px 0px 5px;
     border: 1px solid black;
     background-color: white;
     border-radius: 10px;
