--- a/src/index.css
+++ b/src/index.css
@@ -111,12 +111,27 @@ body {
   background-image: none;
 }
 
-
 .backgroundImg{
   position: absolute;
   z-index: 0;
   height: 100%;
   opacity: 0.4;
+}
+
+.backButton{
+  font-family: "Inter", sans-serif;
+  font-size: 15px;
+  border: 1px solid black;
+  border-radius: 8px;
+  padding: 3px 6px;
+  margin-bottom: 10px;
+  width: fit-content;
+}
+
+.backButton:hover{
+  cursor: pointer;
+  color: white;
+  background-color: black;
 }
 
 .subpageDaisies{
