--- a/src/pages/Projects/ProjectTile/ProjectTile.css
+++ b/src/pages/Projects/ProjectTile/ProjectTile.css
@@ -18,6 +18,7 @@
 .projectTile:hover{
     background-color: rgba(225, 207, 220, 0.2);
     transition: 0.1s ease-out;
+    cursor: pointer;
 }
 
 .projectThumbnail{
