--- a/src/pages/Blog/Blog.css
+++ b/src/pages/Blog/Blog.css
@@ -1,10 +1,10 @@
-.mainBlogPage{
-    font-family: "Inter", sans-serif;
-}
-
-.blogPostPage{
+.singleBlogPost{
     font-family: "Inter", sans-serif;
     width: 100%;
+    h1{
+        margin: 10px 0px 5px 0px;
+    }
+
     a{
         color: black;
         transition: 0.1s ease-in;
@@ -17,37 +17,42 @@
     }
 }
 
-.blogPostTagList{
+.singleBlogPostDates{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 10px;
+    
+    h2{
+        margin: 0px;
+        font-size: 16px;
+        font-weight: 400;
+        font-style: italic;
+    }
+
+    span{
+        white-space: pre;
+    }
+}
+
+.singleBlogPostTags{
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: first baseline;
     align-items: center;
     border-bottom: 1px solid black;
-    padding-bottom: 10px;
 
-    p{
-        margin: 0px;
-    }
+    list-style-type: none;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    padding: 0px 0px 10px 0px;
 
-    ul{
-        list-style-type: none;
-        margin: 0px;
-    }
-}
-
-.blogFooterLinks{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    border-top: 1px solid black;
-    padding: 0px 10px;
-
-    .footerLink{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
+    li{
+        margin-right: 2px;
+        padding: 2px 5px;
+        background-color: #d3d3d3;
+        border-radius: 10px;
     }
 }
