--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ body {
   background-position: right;
 
   margin-top: 20px;
-  margin-left: calc(230px + 20px);
+  margin-left: calc(215px + 20px);
   min-height: 95vh;
   width: 100vw;
   display: flex;
@@ -119,7 +119,7 @@ body {
   opacity: 0.4;
 }
 
-.backButton{
+.backButton, .backToTop{
   font-family: "Inter", sans-serif;
   font-size: 15px;
   border: 1px solid black;
@@ -129,7 +129,7 @@ body {
   width: fit-content;
 }
 
-.backButton:hover{
+.backButton:hover, .backToTop:hover{
   cursor: pointer;
   color: white;
   background-color: black;
