--- a/src/components/CaptionedVideo/CaptionedVideo.css
+++ b/src/components/CaptionedVideo/CaptionedVideo.css
@@ -1,4 +1,4 @@
-.captionedImage{
+.captionedVideo{
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -8,20 +8,20 @@
     font-style: italic;
 }
 
-.smallImg{
+.smallVideo{
     width: 360px;
 }
 
-.mediumImg{
+.mediumVideo{
     width: 540px;
 }
 
-.largeImg{
+.largeVideo{
     width: 720px;
 }
 
 @media (max-width: 768px){
-    .smallImg, .mediumImg, .largeImg{
+    .smallVideo, .mediumVideo, .largeVideo{
         width: 100%;
     }
 }
