--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,38 +1,32 @@
-.aboutText{
-    width: 80%;
+.aboutContainer{
+    width: 98%;
     text-align: left;
     padding-left: 5px;
 }
 
-#aboutHeader{
-    height: fit-content;
+.aboutHeader{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     text-align: left;
+    margin-bottom: 20px;
+    width: 100%;
+    
     img{
         height: 300px;
         margin: 10px 10px 10px 0px;
     } 
-    #aboutHeaderText{
-        height: 300px;
+
+    .aboutHeaderText{
+        height: fit-content;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-evenly;
     }
 }
 
-.aboutLine{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 20px 5px 20px 5px;
-}
-
-
-#aboutParagraph{
+.aboutParagraph{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
@@ -114,12 +108,13 @@
 
 
 @media (max-width: 1024px){
-    #aboutHeader{
+    .aboutHeader{
         img{
             height: 250px;
         }
-        #aboutHeaderText{
-            height: 250px;
+        .aboutLine{
+            margin-top: 10px;
+            margin-bottom: 10px;
         }
     }
 
@@ -129,8 +124,19 @@
 }
 
 @media (max-width: 768px){
-    .aboutText {
-        width: 90%;
+    .aboutContainer {
+        width: 98%;
+        padding-left: 10px;
+    }
+
+    .aboutHeader{
+        flex-direction: column;
+        justify-content: center;
+        
+        .aboutHeaderText{
+            justify-content: center;
+            align-items: center;
+        }
     }
     
     .textBasic{
@@ -142,7 +148,7 @@
     }
 
     .textHandwritten{
-        font-size: 20px;
+        font-size: 22px;
     }
 
     .graphPaperStrip {
