--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,158 +1,172 @@
-.aboutContainer{
-    width: 98%;
-    text-align: left;
-    padding-left: 5px;
+.aboutContainer {
+  width: 98%;
+  text-align: left;
+  padding-left: 5px;
+  margin-bottom: 30px;
 }
 
-.aboutHeader{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: left;
-    margin-bottom: 20px;
-    width: 100%;
-    
-    img{
-        height: 300px;
-        margin: 10px 10px 10px 0px;
-    } 
-
-    .aboutHeaderText{
-        height: fit-content;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-    }
+.aboutHeader {
+  padding-bottom: 5px;
+  border-bottom: 1px solid black;
 }
 
-.aboutParagraph{
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    text-align: left;
-    font-size: 18px;
-    a{
-        color: black;
-        background-color: #ECD5E5;
-        transition: 0.1s ease-in;
-        padding: 2px 0px;
-    }
-    
-    a:hover{
-        color: #ECD5E5;
-        background-color: black;
-        transition: 0.1s ease-out;
-    }
+.aboutSection1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: left;
+  margin-bottom: 20px;
+  width: 100%;
+
+  img {
+    height: 350px;
+    margin: 10px 10px 10px 0px;
+  }
 }
 
-.textBasic{
-    font-family: "Inter", sans-serif;
-    font-size: 25px;
-    margin: 0px;
+.aboutSection1Text {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: first baseline;
+
+  p {
+    margin-bottom: 10px;
+  }
 }
 
-.textCursive{
-    font-family: 'Miama';
-    font-size: 50px;
-    margin: 0px;
-    line-height: 1.05;
-}
-
-.textWhimsy{
-    font-family: "Playpen Sans", cursive;
-    font-size: 24px;
-    margin: 0px;
-}
-
-.textHandwritten{
-    font-family: "Lacquer", system-ui;
-    font-size: 30px;
-    margin: 0px;
-}
-
-#contactMe{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.graphPaperStrip {
-  background-image: url('../../assets/backgrounds/graph-paper.png');
-  background-size: 300px 300px; 
-  color: #222f3c;
-  padding: 0.75em 1.25em;
-  margin: 1.25em 0.75em;
+.contactButton {
+  margin: 0px 5px 10px 0px;
+  padding: 3px 6px;
+  border: 1px solid black;
   width: fit-content;
-  max-width: 80%;
-  box-shadow: 2px 4px 8px rgba(0,0,0,0.2);
+  color: white;
+  font-size: 18px;
+  background-color: black;
+  border-radius: 10px;
+  transform: scale(1);
+  transition: 0.1s ease-in;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  p {
+    margin: 0px;
+  }
+
+  .mailIcon {
+    margin-right: 5px;
+  }
 }
 
-.strip1 {
-  clip-path: url('../../assets/backgrounds/clip-paths.svg#cutout1');
-  transform: rotate(-1.5deg);
+.contactButton:hover {
+  transform: scale(1.02);
+  transition: 0.1s ease-out;
 }
 
-.strip2 {
-  clip-path: url('../../assets/backgrounds/clip-paths.svg#cutout2');
-  background-position: 15px 0; 
-  transform: rotate(1deg);
-  margin-left: 2em;
+.aboutSection2 {
+  a {
+    color: black;
+    background-color: #ecd5e5;
+    transition: 0.1s ease-in;
+    padding: 2px 0px;
+  }
+
+  a:hover {
+    color: #ecd5e5;
+    background-color: black;
+    transition: 0.1s ease-out;
+  }
 }
 
-.strip3 {
-  clip-path: url('../../assets/backgrounds/clip-paths.svg#cutout3');
-  transform: rotate(-0.5deg);
+.graphPaperText {
+  background-image: url("../../assets/backgrounds/graphpaper.jpg");
+  background-size: auto;
+  padding: 10px 13px;
+  margin-top: 20px;
+  font-family: "Playpen Sans", cursive;
+  font-size: 18px;
+  width: fit-content;
+  max-width: 1000px;
+  p {
+    margin: 0px;
+  }
 }
 
-
-@media (max-width: 1024px){
-    .aboutHeader{
-        img{
-            height: 250px;
-        }
-        .aboutLine{
-            margin-top: 10px;
-            margin-bottom: 10px;
-        }
-    }
-
-    .graphPaperStrip {
-        max-width: 90%;
-    }
+.graphPaperText:nth-child(even) {
+  margin-right: 20px;
 }
 
-@media (max-width: 768px){
-    .aboutContainer {
-        width: 98%;
-        padding-left: 10px;
-    }
+.graphPaperText:nth-child(odd) {
+  margin-left: 30px;
+}
 
-    .aboutHeader{
-        flex-direction: column;
-        justify-content: center;
-        
-        .aboutHeaderText{
-            justify-content: center;
-            align-items: center;
-        }
-    }
-    
-    .textBasic{
-        font-size: 20px;
-    }
-    
-    .textCursive{
-        font-size: 40px;
-    }
+.textBasic {
+  font-family: "Inter", sans-serif;
+  font-size: 25px;
+  margin: 0px;
+}
 
-    .textHandwritten{
-        font-size: 22px;
-    }
+.textCursive {
+  font-family: "Miama";
+  font-size: 50px;
+  margin: 0px;
+  line-height: 1.05;
+}
 
-    .graphPaperStrip {
-        max-width: 95%;
-    }
+.textWhimsy {
+  font-family: "Playpen Sans", cursive;
+  font-size: 24px;
+  margin: 0px;
+}
 
+.textHandwritten {
+  font-family: "Lacquer", system-ui;
+  font-size: 30px;
+  margin: 0px;
+}
+
+@media (max-width: 1024px) {
+  .aboutSection1 {
+    img {
+      height: 300px;
+    }
+  }
+
+  .aboutSection2 {
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .aboutContainer {
+    padding-left: 10px;
+    width: 95%;
+  }
+
+  .aboutSection1 {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .aboutSection1Text {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .textBasic {
+    font-size: 20px;
+  }
+
+  .textCursive {
+    font-size: 44px;
+  }
+
+  .textHandwritten {
+    font-size: 24px;
+  }
 }
