--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,172 +1,185 @@
 .aboutContainer {
-  width: 98%;
-  text-align: left;
-  padding-left: 5px;
-  margin-bottom: 30px;
+    width: 98%;
+    text-align: left;
+    padding-left: 5px;
+    margin-bottom: 30px;
 }
 
 .aboutHeader {
-  padding-bottom: 5px;
-  border-bottom: 1px solid black;
+    padding-bottom: 5px;
+    border-bottom: 1px solid black;
 }
 
 .aboutSection1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  text-align: left;
-  margin-bottom: 20px;
-  width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: left;
+    width: 100%;
 
-  img {
-    height: 350px;
-    margin: 10px 10px 10px 0px;
-  }
+    img {
+        height: 350px;
+        margin: 10px 10px 10px 0px;
+    }
 }
 
 .aboutSection1Text {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: first baseline;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: first baseline;
 
-  p {
-    margin-bottom: 10px;
-  }
+    p {
+        margin-bottom: 10px;
+    }
 }
 
 .contactButton {
-  margin: 0px 5px 10px 0px;
-  padding: 3px 6px;
-  border: 1px solid black;
-  width: fit-content;
-  color: white;
-  font-size: 18px;
-  background-color: black;
-  border-radius: 10px;
-  transform: scale(1);
-  transition: 0.1s ease-in;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-
-  p {
-    margin: 0px;
-  }
-
-  .mailIcon {
-    margin-right: 5px;
-  }
-}
-
-.contactButton:hover {
-  transform: scale(1.02);
-  transition: 0.1s ease-out;
-}
-
-.aboutSection2 {
-  a {
-    color: black;
-    background-color: #ecd5e5;
-    transition: 0.1s ease-in;
-    padding: 2px 0px;
-  }
-
-  a:hover {
-    color: #ecd5e5;
+    margin: 0px 5px 10px 0px;
+    padding: 3px 6px;
+    border: 1px solid black;
+    width: fit-content;
+    color: white;
+    font-size: 18px;
     background-color: black;
+    border-radius: 10px;
+    transform: scale(1);
+    transition: 0.1s ease-in;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    p {
+        margin: 0px;
+    }
+
+    .icon {
+        margin-right: 5px;
+    }
+}
+
+.contactButton2 {
+    color: black;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+.contactButton2:hover {
+    transform: scale(1.02);
     transition: 0.1s ease-out;
-  }
+}
+
+.secondaryContactButtons {
+    display: flex;
+    flex-direction: row;
+}
+
+.aboutSection2,
+.aboutSection3 {
+    margin-top: 20px;
+
+    a {
+        color: black;
+        background-color: #ecd5e5;
+        transition: 0.1s ease-in;
+        padding: 2px 0px;
+    }
+
+    a:hover {
+        color: #ecd5e5;
+        background-color: black;
+        transition: 0.1s ease-out;
+    }
 }
 
 .graphPaperText {
-  background-image: url("../../assets/backgrounds/graphpaper.jpg");
-  background-size: auto;
-  padding: 10px 13px;
-  margin-top: 20px;
-  font-family: "Playpen Sans", cursive;
-  font-size: 18px;
-  width: fit-content;
-  max-width: 1000px;
-  p {
-    margin: 0px;
-  }
+    background-image: url("../../assets/backgrounds/graphpaper.jpg");
+    background-size: auto;
+    padding: 10px 13px;
+    margin-top: 20px;
+    font-family: "Playpen Sans", cursive;
+    font-size: 18px;
+    width: fit-content;
+    max-width: 1000px;
+    p {
+        margin: 0px;
+    }
 }
 
 .graphPaperText:nth-child(even) {
-  margin-right: 20px;
+    margin-right: 20px;
 }
 
 .graphPaperText:nth-child(odd) {
-  margin-left: 30px;
+    margin-left: 30px;
 }
 
 .textBasic {
-  font-family: "Inter", sans-serif;
-  font-size: 25px;
-  margin: 0px;
+    font-family: "Inter", sans-serif;
+    font-size: 25px;
+    margin: 0px;
 }
 
 .textCursive {
-  font-family: "Miama";
-  font-size: 50px;
-  margin: 0px;
-  line-height: 1.05;
+    font-family: "Miama";
+    font-size: 50px;
+    margin: 0px;
+    line-height: 1.05;
 }
 
 .textWhimsy {
-  font-family: "Playpen Sans", cursive;
-  font-size: 24px;
-  margin: 0px;
+    font-family: "Playpen Sans", cursive;
+    font-size: 24px;
+    margin: 0px;
 }
 
 .textHandwritten {
-  font-family: "Lacquer", system-ui;
-  font-size: 30px;
-  margin: 0px;
+    font-family: "Lacquer", system-ui;
+    font-size: 30px;
+    margin: 0px;
 }
 
 @media (max-width: 1024px) {
-  .aboutSection1 {
-    img {
-      height: 300px;
+    .aboutSection1 {
+        img {
+            height: 300px;
+        }
     }
-  }
 
-  .aboutSection2 {
-    width: 100%;
-  }
+    .aboutSection2 {
+        width: 100%;
+    }
 }
 
 @media (max-width: 768px) {
-  .aboutContainer {
-    padding-left: 10px;
-    width: 95%;
-  }
+    .aboutContainer {
+        padding-left: 10px;
+        width: 95%;
+    }
 
-  .aboutSection1 {
-    flex-direction: column;
-    justify-content: center;
-  }
+    .aboutSection1 {
+        flex-direction: column;
+        justify-content: center;
+    }
 
-  .aboutSection1Text {
-    justify-content: center;
-    align-items: center;
-  }
+    .aboutSection1Text {
+        justify-content: center;
+        align-items: center;
+    }
 
-  .textBasic {
-    font-size: 20px;
-  }
+    .textBasic {
+        font-size: 20px;
+    }
 
-  .textCursive {
-    font-size: 44px;
-  }
+    .textCursive {
+        font-size: 44px;
+    }
 
-  .textHandwritten {
-    font-size: 24px;
-  }
+    .textHandwritten {
+        font-size: 24px;
+    }
 }
